<resources>
    <string name="app_name">ChongFirstApp</string>
    <string name="chong_id_label">Hello World, Chong, Erica 6/15/2020</string>
    <string name="enter_name">Name</string>
    <string name="enter_username">Username</string>
    <string name="enter_email">Email</string>
    <string name="button_submit">Submit</string>
    <string name="pick_date">Date of Birth</string>
    <string name="button_goBack">Enter Another User</string>
    <string name="Date_of_birth">Date of Birth</string>
    <string name="enter_age">Enter your age</string>
    <string name="user_description">Tell us a bit about yourself</string>
    <string name="enter_occupation">What is your occupation?</string>
    <string name="welcome_msg">Welcome to our Dating Site! Get ready to meet  the person you are destined to be with!</string>
    <string name="timeTomeet">Time to Meet Destiny</string>
    <string name="matches_placeholder_text">This is where Matches will go</string>
    <string name="settings_placeholder_text">This is where the settings will be</string>
    <string name="placeholder_text">Thank you for signing up for our app!</string>
    <string name="thanks">Thanks for signing up!</string>
    <string name="cute_puppy">I dare you say no to this face! I can be quite playful!</string>
    <string name="nameOfMatch">Princess Mandoo</string>
    <string name="toolbarText">Toolbar</string>
    <string name="update_acct">Update Account</string>
    <string name="view_title">Update your settings here</string>
    <string name="setReminderTime">Preferred reminder time</string>
    <string name="setDistance">Prefered search distance</string>
    <string name="specifyGender">Specify gender here</string>
    <string name="selectAccountType">Public or Private?</string>
    <string name="selectInterestedAgeRange">Preferred Age Range</string>
    <string name="enable_location">Please enable location</string>
    <string name="location_message">You must enable a location to see matches.</string>
    <string name="location_settings">Location Settings</string>
    <string name="location_cancel">Cancel</string>

</resources>
