<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/dogPic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/twenty_marginStart"
        android:layout_marginBottom="@dimen/twenty_marginBottom"
        android:src="@mipmap/doc_pic"
        />

    <TextView
        android:id="@+id/header_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/twenty_marginStart"
        android:layout_marginBottom="@dimen/twenty_marginBottom"
        android:text="@string/chong_id_label"
         />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/twenty_marginStart"
        android:layout_marginBottom="@dimen/twenty_marginBottom"
        android:hint="@string/enter_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/twenty_marginStart"
        android:layout_marginBottom="@dimen/twenty_marginBottom"
        android:hint="@string/enter_username"
        android:inputType="text" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/twenty_marginStart"
        android:layout_marginBottom="@dimen/twenty_marginBottom"
        android:hint="@string/enter_email"
        android:inputType="text" />

    <EditText
            android:id="@+id/getDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/twenty_marginStart"
            android:layout_marginBottom="@dimen/twenty_marginBottom"/>

    <Button
        android:id="@+id/pickbirthdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/twenty_marginStart"
        android:layout_marginBottom="@dimen/twenty_marginBottom"
        android:text="@string/Date_of_birth"
        />


    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/twenty_marginStart"
        android:layout_marginBottom="@dimen/twenty_marginBottom"
        android:text="@string/button_submit"
        android:onClick="getSecondActivity"/>


</LinearLayout>